# skeleter

./: README.md  config.yaml  install.sh
skeleter_package/: .gitignore  LICENSE  MANIFEST.in  PACKAGE_USAGE.md  README.md  build_package.sh  install_dev.sh  pyproject.toml  requirements.txt
skeleter_package/skeleter/: __init__.py  main.py
