[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeleter"
version = "1.0.0"
description = "Git-integrated template generator with AWS Parameter Store integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Skeleter Team", email = "skeleter@example.com"}
]
keywords = ["templating", "git", "aws", "parameter-store", "jinja2", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
    "MarkupSafe>=2.1.0",
    "ruamel.yaml>=0.17.0",
    "GitPython>=3.1.0",
    "PyGithub>=1.58.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "moto>=4.1.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/skeleter"
Documentation = "https://github.com/yourusername/skeleter#readme"
Repository = "https://github.com/yourusername/skeleter.git"
"Bug Tracker" = "https://github.com/yourusername/skeleter/issues"

[project.scripts]
skeleter = "skeleter.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skeleter*"]

[tool.setuptools.package-data]
skeleter = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
